--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "node": "^21.1.0"
   },
